--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "normalize.css": "^7.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^9.1.5",
     "gulp": "^3.9.1",
     "gulp-postcss": "^7.0.0",
-    "gulp-watch": "^4.3.11"
+    "gulp-watch": "^4.3.11",
+    "postcss-nested": "^4.0.0",
+    "postcss-simple-vars": "^5.0.1"
   }
 }
