--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp": "^3.9.1",
     "gulp-postcss": "^7.0.0",
     "gulp-watch": "^4.3.11",
+    "postcss-import": "^12.0.0",
     "postcss-nested": "^4.0.0",
     "postcss-simple-vars": "^5.0.1"
   }
