--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-postcss": "^7.0.0",
     "gulp-watch": "^4.3.11",
     "postcss-import": "^12.0.0",
+    "postcss-mixins": "^6.2.0",
     "postcss-nested": "^4.0.0",
     "postcss-simple-vars": "^5.0.1"
   }
