--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "browser-sync": "^2.24.7",
     "gulp": "^3.9.1",
     "gulp-postcss": "^7.0.0",
+    "gulp-svg-sprite": "^1.5.0",
     "gulp-watch": "^4.3.11",
     "postcss-import": "^12.0.0",
     "postcss-mixins": "^6.2.0",
