--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "dependencies": {
     "jquery": "^3.2.1",
-    "normalize.css": "^7.0.0"
+    "normalize.css": "^7.0.0",
+    "webpack": "^4.20.2"
   },
   "devDependencies": {
     "autoprefixer": "^9.1.5",
@@ -18,6 +19,7 @@
     "postcss-import": "^12.0.0",
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "^4.0.0",
-    "postcss-simple-vars": "^5.0.1"
+    "postcss-simple-vars": "^5.0.1",
+    "webpack-cli": "^3.1.2"
   }
 }
