--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "travel-site",
   "version": "1.0.0",
   "dependencies": {
-    "jquery": "^3.2.1",
     "normalize.css": "^7.0.0",
     "webpack": "^4.20.2"
   },
   "devDependencies": {
     "autoprefixer": "^9.1.5",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.24.7",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
@@ -15,6 +17,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-svg-sprite": "^1.5.0",
     "gulp-watch": "^4.3.11",
+    "jquery": "^3.3.1",
     "postcss-hexrgba": "^1.0.1",
     "postcss-import": "^12.0.0",
     "postcss-mixins": "^6.2.0",
